syntax = "proto3";

package pb;
option go_package = "pb/;pb";

import "google/protobuf/timestamp.proto";
import "transform_options/annotations.proto";

option (transformer.go_repo_package) = "models";
option (transformer.go_protobuf_package) = "pb";
option (transformer.go_models_file_path) = "internal/userm/models/models.go";

message User {
    option (transformer.go_struct) = "User";
    google.protobuf.Timestamp created_at = 1;
    google.protobuf.Timestamp updated_at = 2;
    string email = 3;
    string user_id = 4;
    string first_name = 5;
    string last_name = 6;
    string password = 7;
}
